Add mappers and add layers for remaining public resources